MAR10001-581: Hero widget (layout issues)

--- a/src/Marello/Bundle/OrderBundle/Resources/public/less/styles.less
+++ b/src/Marello/Bundle/OrderBundle/Resources/public/less/styles.less
@@ -181,3 +181,13 @@ table.hero-products-table {
         text-align: center;
     }
 }
+
+form[name=hero_products_widget] {
+    .control-label {
+        width: 90px;
+    }
+
+    .items-table-container {
+        margin-left: 114px !important;
+    }
+}
